src/test/deca/syntax/invalid/SansObjet/IfVar.deca
//Description
//  if comme nom de variable
//
//Réponse
//  Erreur syntaxique ligne 9
//  no viable alternative at input 'if'

{
    int if = 0;
}